# nutrition-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  MVP_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.agents/: principles.md
.github/workflows/: ci.yml
api/: index.py
src/nutrition_tracker/: __init__.py  app_logging.py  config.py  containers.py  main.py  telegram_commands.py
src/nutrition_tracker/adapters/: fdc_client.py  openai_vision_client.py  supabase_admin_repository.py  supabase_audit_repository.py  supabase_library_repository.py  supabase_meal_log_repository.py  supabase_photo_repository.py  supabase_session_repository.py  supabase_stats_repository.py  supabase_user_repository.py  supabase_user_settings_repository.py  telegram_client.py  telegram_file_client.py
src/nutrition_tracker/api/: admin.py  app.py  asgi.py  telegram_models.py
src/nutrition_tracker/domain/: admin.py  library.py  meals.py  models.py  nutrition.py  sessions.py  stats.py  vision.py
src/nutrition_tracker/services/: admin.py  audit.py  cache.py  commands.py  library.py  meals.py  nutrition.py  sessions.py  stats.py  user_settings.py  users.py  vision.py
supabase/migrations/: 0001_mvp.sql
tests/: __init__.py  conftest.py  test_admin.py  test_admin_endpoints.py  test_app_logging.py  test_asgi.py  test_container.py  test_http_clients.py  test_library_service.py  test_main.py  test_meal_log_service.py  test_nutrition_service.py  test_session_service.py  test_stats_service.py  test_supabase_adapters.py  test_telegram_commands.py  test_user_service.py  test_vision_service.py  test_webhook.py
