[project]
name = "nutrition-tracker"
version = "0.1.0"
description = "A Python application for tracking nutritional data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openai>=1.59.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "supabase>=2.6.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
nutrition-tracker = "nutrition_tracker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nutrition_tracker"]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================================================
# coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["src/nutrition_tracker"]
branch = true
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert
    "D103",   # Missing docstring in public function
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D105",   # Missing docstring in magic method
    "ANN",    # Type annotations not required in tests
    "PLR2004", # Magic value comparison
    "ARG002", # Unused method argument
    "S106",   # Possible hardcoded password
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["nutrition_tracker"]
